fix: fix not error code display error problem
